--- a/Extension/languages/ru.json
+++ b/Extension/languages/ru.json
@@ -1,178 +1,28 @@
-[
-    {
-        "term": "tab.installed.heading",
-        "definition": "\u0421\u043f\u0430\u0441\u0438\u0431\u043e \u0437\u0430 \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0443 PreMiD",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.didInstallQuestion",
-        "definition": "\u0412\u044b \u0443\u0436\u0435 \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u043b\u0438 \u043f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0435?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.notInstalled",
-        "definition": "\u041d\u0435\u0442? \u0422\u043e\u0433\u0434\u0430 \u0441\u043b\u0435\u0434\u0443\u0439\u0442\u0435 \u044d\u0442\u0438\u043c \u0438\u043d\u0441\u0442\u0440\u0443\u043a\u0446\u0438\u044f\u043c:",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.download",
-        "definition": "\u0421\u043a\u0430\u0447\u0430\u0439\u0442\u0435 \u043f\u043e\u0441\u043b\u0435\u0434\u043d\u044e\u044e \u0432\u0435\u0440\u0441\u0438\u044e \u0441 $1",
-        "context": "$1 gets replaced by a value",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instruction.github",
-        "definition": "\u043c\u043e\u0435\u0433\u043e \u0440\u0435\u043f\u043e\u0437\u0438\u0442\u043e\u0440\u0438\u044f",
-        "context": "Link to the GitHub project",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.wait",
-        "definition": "\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u0435 \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u0449\u0438\u043a \u0438 \u0434\u043e\u0436\u0434\u0438\u0442\u0435\u0441\u044c \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043a\u0438",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.warnings",
-        "definition": "\u0412\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u043f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435 FireWall \u0438\u043b\u0438 SmartScreen (\u042d\u0442\u043e \u043d\u0435 \u0432\u0438\u0440\u0443\u0441, \u044f \u043a\u043b\u044f\u043d\u0443\u0441\u044c)",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.instructions.autostart",
-        "definition": "\u041f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u0434\u043e\u043b\u0436\u043d\u043e \u0437\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c\u0441\u044f \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438, \u0432\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u044d\u0442\u043e \u043f\u0440\u043e\u0432\u0435\u0440\u0438\u0442\u044c \u043f\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0432 \u0432 \u043c\u0435\u043d\u044e \u0437\u0430\u0434\u0430\u0447 (Windows) \u0438\u043b\u0438 \u043c\u0435\u043d\u044e\u0431\u0430\u0440 (MacOS)",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.subHeading.ready",
-        "definition": "\u0414\u0430? \u0422\u043e\u0433\u0434\u0430 \u0432\u044b \u043c\u043e\u0436\u0435\u0442\u0435 \u043d\u0430\u0447\u0438\u043d\u0430\u0442\u044c!",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.installed.intro",
-        "definition": "\u041d\u0430\u0447\u043d\u0438\u0442\u0435 \u0441 \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u0432\u0438\u0434\u0435\u043e \u043d\u0430 YouTube, \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u0432\u0430\u0448\u0438\u0445 \u043b\u044e\u0431\u0438\u043c\u044b\u0445 \u0441\u0442\u0440\u0438\u043c\u0435\u0440\u043e\u0432 \u043d\u0430 Twitch, \u0441\u043c\u043e\u0442\u0440\u0438\u0442\u0435 \u0441\u0432\u043e\u0438 \u043b\u044e\u0431\u0438\u043c\u044b\u0435 \u0430\u043d\u0438\u043c\u0435 \u043d\u0430 KissAnime \u0438\u043b\u0438 \u043d\u0430 JKAnime, \u0438\u043b\u0438 \u0434\u0430\u0436\u0435 \u043d\u0430 Netflix... \u041a\u0442\u043e \u0437\u043d\u0430\u0435\u0442?<br>\u0418\u043b\u0438 \u0432\u044b \u043f\u0440\u043e\u0441\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u043f\u043e\u0441\u043b\u0443\u0448\u0430\u0442\u044c \u0432\u0430\u0448\u0438 \u043b\u044e\u0431\u0438\u043c\u044b\u0435 \u0442\u0440\u0435\u043a\u0438 \u043d\u0430 SoundCloud \u0438 YouTube Music. \u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u044c, \u043d\u0430\u0436\u0430\u0432 \u043d\u0430 \u0438\u043a\u043e\u043d\u043a\u0443 PreMiD \u0432 \u0432\u0430\u0448\u0435\u043c \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0435.",
-        "context": "Pls leave <br> as is.",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.heading",
-        "definition": "PreMiD \u0431\u044b\u043b \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d!",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.subHeading.whatsNew",
-        "definition": "\u0427\u0442\u043e \u043d\u043e\u0432\u043e\u0433\u043e?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "tab.updated.subHeading.whatChanged",
-        "definition": "\u0427\u0442\u043e \u0438\u0437\u043c\u0435\u043d\u0438\u043b\u043e\u0441\u044c?",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "presence.playback.playing",
-        "definition": "\u0412\u043e\u0441\u043f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0438\u0442\u0441\u044f",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "presence.playback.paused",
-        "definition": "\u0412\u043e\u0438\u0441\u043f\u0440\u043e\u0438\u0437\u0432\u0435\u0434\u0435\u043d\u0438\u0435 \u043f\u0440\u0438\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u043e",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.tabs.options",
-        "definition": "\u041e\u043f\u0446\u0438\u0438",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.headings.general",
-        "definition": "\u041e\u0441\u043d\u043e\u0432\u043d\u043e\u0435",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.headings.presences",
-        "definition": "\u0421\u0435\u0440\u0432\u0438\u0441\u044b",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.enabled",
-        "definition": "\u0412\u043a\u043b\u044e\u0447\u0435\u043d\u043e",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.mediaControls",
-        "definition": "\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043c\u0435\u0434\u0438\u0430",
-        "context": "Media Control keys (Keyboard\/headphones)",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.checkForUpdates",
-        "definition": "\u041f\u0440\u043e\u0432\u0435\u0440\u044f\u0442\u044c \u043d\u0430\u043b\u0438\u0447\u0438\u0435 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0439",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    },
-    {
-        "term": "popup.options.systemStartup",
-        "definition": "\u0417\u0430\u043f\u0443\u0441\u043a \u043f\u0440\u0438 \u0441\u0442\u0430\u0440\u0442\u0435 \u0441\u0438\u0441\u0442\u0435\u043c\u044b",
-        "context": "",
-        "term_plural": "",
-        "reference": "",
-        "comment": ""
-    }
-]
+{
+    "tab.installed.heading": "Спасибо за установку PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "Вы уже установили приложение?",
+    "tab.installed.subHeading.notInstalled": "Нет? Тогда следуйте этим инструкциям:",
+    "tab.installed.instructions.download": "Скачайте последнюю версию с $1",
+    "tab.installed.instruction.github": "моего репозитория",
+    "tab.installed.instructions.wait": "Запустите установщик и дождитесь окончания установки",
+    "tab.installed.instructions.warnings": "Вы можете увидеть предупреждение FireWall или SmartScreen (Это не вирус, я клянусь)",
+    "tab.installed.instructions.autostart": "Приложение должно запуститься автоматически, вы можете это проверить посмотрев в меню задач (Windows) или менюбар (MacOS)",
+    "tab.installed.subHeading.ready": "Да? Тогда вы можете начинать!",
+    "tab.installed.intro": "Начните с просмотра видео на YouTube, просмотра ваших любимых стримеров на Twitch, смотрите свои любимые аниме на KissAnime или на JKAnime, или даже на Netflix... Кто знает?<br>Или вы просто хотите послушать ваши любимые треки на SoundCloud и YouTube Music. Настройки можно открыть, нажав на иконку PreMiD в вашем браузере.",
+    "tab.updated.heading": "PreMiD был обновлен!",
+    "tab.updated.subHeading.whatsNew": "Что нового?",
+    "tab.updated.subHeading.whatChanged": "Что изменилось?",
+    "presence.playback.playing": "Воспроизводится",
+    "presence.playback.paused": "Воиспроизведение приостановлено",
+    "popup.tabs.options": "Опции",
+    "popup.tabs.credits": "О нас",
+    "popup.options.headings.general": "Основное",
+    "popup.options.headings.presences": "Сервисы",
+    "popup.options.enabled": "Включено",
+    "popup.options.mediaControls": "Управление медиа",
+    "popup.options.checkForUpdates": "Проверять наличие обновлений",
+    "popup.options.darkTheme": "Темная тема",
+    "connectionInfo.connected": "Подключен к %SERVICE%",
+    "connectionInfo.disconnected": "Отключен от %SERVICE%",
+    "popup.options.systemStartup": "Запуск при старте системы"
+}
