--- a/Extension/languages/no.json
+++ b/Extension/languages/no.json
@@ -1,1 +1,48 @@
-{}
+{
+    "tab.installed.heading": "Takk for at du installerte PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "Har du installert applikasjonen enda?",
+    "tab.installed.subHeading.notInstalled": "Ikke? Følg disse trinnene:",
+    "tab.installed.instructions.download": "Last ned den nyeste versjonen fra $1",
+    "tab.installed.instructions.github": "mitt GitHub repo",
+    "tab.installed.instructions.wait": "Åpne installasjonsprogrammet og vent til den er ferdig med å installere",
+    "tab.installed.instructions.warnings": "Det kan hende at du får en advarsel fra Brannmuren eller SmartScreen (Det er ikke et virus, jeg lover!)",
+    "tab.installed.instructions.autostart": "Applikasjonen bør starte automatisk, du kan sjekke om den har gjort dette ved å sjekke...",
+    "tab.installed.subHeading.ready": "Ja? Da er du klar til å bruke PreMiD",
+    "tab.installed.intro": "Start ved å bruke en av våre støttede tjenester og nyt kulhetsfølelsen",
+    "tab.updated.heading": "PreMiD har blitt oppdatert",
+    "tab.updated.subHeading.whatsNew": "Hva er nytt?",
+    "tab.updated.subHeading.whatChanged": "Hva har endret seg?",
+    "presence.playback.playing": "Spiller av",
+    "presence.playback.paused": "Avspilling pauset",
+    "popup.tabs.options": "Alternativer",
+    "popup.tabs.credits": "Bidragsytere",
+    "popup.options.headings.general": "Generelt",
+    "popup.options.headings.presences": "",
+    "popup.options.enabled": "Aktivert",
+    "popup.options.titleMenubar": "Tittel Menylinje",
+    "popup.options.mediaControls": "Mediakontroll",
+    "popup.options.checkForUpdates": "Sjekk etter oppdatering",
+    "popup.options.darkTheme": "Mørkt Tema",
+    "connectionInfo.connected": "Koblet til %SERVICE%",
+    "connectionInfo.disconnected": "Koblet fra %SERVICE%",
+    "popup.options.systemStartup": "Start ved S",
+    "presence.episode": "Episode",
+    "presence.browsing": "Surfer på...",
+    "presence.watching": "ser på",
+    "tab.installed.letsStart": "La oss komme igang",
+    "tab.installed.getSupport": "Få Hjelp",
+    "tab.installed.likeThisProject": "Liker du prosjektet? Gi det en stjerne på $1",
+    "tab.updated.gotIt": "Ok",
+    "tab.updated.added0": "Nytt Design!",
+    "tab.updated.added1": "Rabb.it støtte",
+    "tab.updated.nextVersion.added2": "Amazon Prime støtte",
+    "tab.updated.added3": "Anime4You støtte",
+    "tab.updated.nextVersion.added4": "CrunchyRoll støtte",
+    "tab.updated.changed0": "Mange feil er fikset, så nå vil de ikke plage deg mer",
+    "tab.updated.changed1": "Mange omskrivninger",
+    "extension.description": "",
+    "popup.options.connectInfo": "Tilkoblingsinformasjon",
+    "popup.error": "Feil",
+    "popup.error.message": "Kunne ikke laste inn listen over bidragsytere",
+    "presence.lookingForAnime": "Leter etter Anime"
+}
