--- a/Extension/languages/en.json
+++ b/Extension/languages/en.json
@@ -1,49 +1,51 @@
 {
-  "tab.installed.heading": "Thank you for installing PreMiD",
-  "tab.installed.subHeading.didInstallQuestion": "Did you install the application yet?",
-  "tab.installed.subHeading.notInstalled": "No? Follow these steps:",
-  "tab.installed.instructions.download": "Download the latest version from $1",
-  "tab.installed.instructions.github": "my GitHub repository",
-  "tab.installed.instructions.wait": "Open the installer and wait until it installed",
-  "tab.installed.instructions.warnings": "You may receive a warning about FireWall and SmartScreen (Its not a virus i promise!)",
-  "tab.installed.instructions.autostart": "The application should start automatically, you can check this by looking at your Taskbar (Windows) or your Menubar (MacOS)",
-  "tab.installed.subHeading.ready": "Yes? You are ready to go!",
-  "tab.installed.intro": "Start by using one of our supported services and enjoy the sweet taste of coolness!",
-  "tab.updated.heading": "PreMiD has been updated!",
-  "tab.updated.subHeading.whatsNew": "Whats new?",
-  "tab.updated.subHeading.whatChanged": "What changed?",
-  "presence.playback.playing": "Playing back",
-  "presence.playback.paused": "Playback paused",
-  "popup.tabs.options": "Options",
-  "popup.tabs.credits": "Credits",
-  "popup.options.headings.general": "General",
-  "popup.options.headings.presences": "Presences",
-  "popup.options.enabled": "Enabled",
-  "popup.options.titleMenubar": "Title Menubar",
-  "popup.options.mediaControls": "Media Controls",
-  "popup.options.checkForUpdates": "Check for updates",
-  "popup.options.darkTheme": "Dark Theme",
-  "connectionInfo.connected": "Connected to %SERVICE%",
-  "connectionInfo.disconnected": "Disconnected from %SERVICE%",
-  "popup.options.systemStartup": "System Startup",
-  "presence.episode": "Episode",
-  "presence.browsing": "Browsing...",
-  "presence.watching": "Watching",
-  "tab.installed.letsStart": "Let's Start!",
-  "tab.installed.getSupport": "Get Support",
-  "tab.installed.likeThisProject": "Like this project? Star it on $1!",
-  "tab.updated.gotIt": "Got it!",
-  "tab.updated.added0": "New Design!",
-  "tab.updated.added1": "Rabb.it support",
-  "tab.updated.nextVersion.added2": "Amazon Prime support",
-  "tab.updated.added3": "Anime4You support",
-  "tab.updated.nextVersion.added4": "CrunchyRoll support",
-  "tab.updated.changed0": "Lots of bugs killed, they won't bug you anymore",
-  "tab.updated.changed1": "Lots of rewrites",
-  "extension.description": "PreMiD adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc...",
-  "popup.options.connectInfo": "Connection Info",
-  "popup.error": "Error",
-  "popup.error.message": "Could not load credits",
-  "presence.lookingForAnime": "Searching for Anime...",
-  "tabPriority.prioritized": "Tab prioritized"
+    "tab.installed.heading": "Thank you for installing PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "Did you install the application yet?",
+    "tab.installed.subHeading.notInstalled": "No? Follow these steps:",
+    "tab.installed.instructions.download": "Download the latest version from {{github_link}}",
+    "tab.installed.instructions.github": "my GitHub repository",
+    "tab.installed.instructions.wait": "Open the installer and wait until it installed",
+    "tab.installed.instructions.warnings": "You may receive a warning about FireWall and SmartScreen (Its not a virus i promise!)",
+    "tab.installed.instructions.autostart": "The application should start automatically, you can check this by looking at your Taskbar (Windows) or your Menubar (MacOS)",
+    "tab.installed.subHeading.ready": "Yes? You are ready to go!",
+    "tab.installed.intro": "Start by using one of our supported services and enjoy the sweet taste of coolness!",
+    "tab.updated.heading": "PreMiD has been updated!",
+    "tab.updated.subHeading.whatsNew": "Whats new?",
+    "tab.updated.subHeading.whatChanged": "What changed?",
+    "presence.playback.playing": "Playing back",
+    "presence.playback.paused": "Playback paused",
+    "popup.tabs.options": "Options",
+    "popup.tabs.credits": "Credits",
+    "popup.options.headings.general": "General",
+    "popup.options.headings.presences": "Presences",
+    "popup.options.enabled": "Enabled",
+    "popup.options.titleMenubar": "Title Menubar",
+    "popup.options.mediaControls": "Media Controls",
+    "popup.options.checkForUpdates": "Check for updates",
+    "popup.options.darkTheme": "Dark Theme",
+    "popup.options.systemStartup": "System Startup",
+    "presence.episode": "Episode {{episode}}",
+    "presence.browsing": "Browsing...",
+    "presence.watching": "Watching",
+    "tab.installed.letsStart": "Let's Start!",
+    "tab.installed.getSupport": "Get Support",
+    "tab.installed.likeThisProject": "Like this project? Star it on $1!",
+    "tab.updated.gotIt": "Got it!",
+    "extension.description": "PreMiD adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc...",
+    "popup.options.connectInfo": "Connection Info",
+    "popup.error": "Error",
+    "popup.error.message": "Could not load credits",
+    "presence.lookingForAnime": "Searching for Anime...",
+    "tabPriority.prioritized": "Tab prioritized",
+    "popup.options.tabPriority": "Tab Priority Info",
+    "tab.updated.changed0": "Complete rewrite of extension",
+    "tab.updated.changed1": "Tab Priority now works how it should have been all the time",
+    "tab.updated.changed2": "Killed nasty bugs",
+    "tab.updated.added0": "Crunchyroll Support",
+    "tab.updated.changed3": "Netflix now shows Watching \"Movie Name\" when watching movies",
+    "tab.updated.changed4": "Media Control keys fixed",
+    "tab.updated.added1": "Aniflix Support",
+    "tab.updated.added2": "Tab Priority toggle",
+    "tab.updated.changed5": "Translation system overhaul",
+    "tab.updated.changed6": "Fixed credits only showing English error message"
 }
