--- a/Extension/languages/he.json
+++ b/Extension/languages/he.json
@@ -23,8 +23,6 @@
     "popup.options.mediaControls": "הגדרות מדיה",
     "popup.options.checkForUpdates": "בדוק עדכונים",
     "popup.options.darkTheme": "רקע שחור",
-    "connectionInfo.connected": "התחברות ל%SERVICE%",
-    "connectionInfo.disconnected": "התנתקות מ%SERVICE%",
     "popup.options.systemStartup": "הדלקת System",
     "presence.episode": "פרק",
     "presence.browsing": "גולש..",
@@ -33,15 +31,10 @@
     "tab.installed.getSupport": "קבל תמיכה",
     "tab.installed.likeThisProject": "אוהב את הפרוייקט הזה? תשפר אותו רק בשביל 1$!",
     "tab.updated.gotIt": "הבנתי!",
-    "tab.updated.added0": "עיצוב חדש!",
-    "tab.updated.added1": "Rabb.it תמיכה",
-    "tab.updated.nextVersion.added2": "Amazon Prime תמיכה",
-    "tab.updated.added3": "Anime4You תמיכה",
-    "tab.updated.nextVersion.added4": "CrunchyRoll תמיכה",
-    "tab.updated.changed0": "הרבה באגים הושמתו, הם לא יפריעו לך יותר",
-    "tab.updated.changed1": "הרבה רישומים מחדש",
     "extension.description": "PreMiD מוסיפה אינטגרציית Discord Rich Presence, הגדרות מדיה ועוד הרבה לYouTube/YouTube Music, Twitch ועוד..\n",
     "popup.options.connectInfo": "אודות התחברות",
     "popup.error": "שגיאה",
-    "popup.error.message": "לא היה ניתן לטעון את ההשראים"
+    "popup.error.message": "לא היה ניתן לטעון את ההשראים",
+    "presence.lookingForAnime": "מחפש אחר אנימה...",
+    "tabPriority.prioritized": "עדיפות כרטיסייה"
 }
