--- a/Extension/languages/no.json
+++ b/Extension/languages/no.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Har du installert applikasjonen enda?",
     "tab.installed.subHeading.notInstalled": "Ikke? Følg disse trinnene:",
     "tab.installed.instructions.download": "Last ned den nyeste versjonen fra $1",
-    "tab.installed.instructions.github": "mitt GitHub repo",
+    "tab.installed.instructions.github": "mitt GitHub repository",
     "tab.installed.instructions.wait": "Åpne installasjonsprogrammet og vent til den er ferdig med å installere",
     "tab.installed.instructions.warnings": "Det kan hende at du får en advarsel fra Brannmuren eller SmartScreen (Det er ikke et virus, jeg lover!)",
     "tab.installed.instructions.autostart": "Applikasjonen bør starte automatisk, du kan sjekke om den har gjort dette ved å sjekke...",
@@ -17,14 +17,12 @@
     "popup.tabs.options": "Alternativer",
     "popup.tabs.credits": "Bidragsytere",
     "popup.options.headings.general": "Generelt",
-    "popup.options.headings.presences": "",
+    "popup.options.headings.presences": "Presences",
     "popup.options.enabled": "Aktivert",
     "popup.options.titleMenubar": "Tittel Menylinje",
     "popup.options.mediaControls": "Mediakontroll",
     "popup.options.checkForUpdates": "Sjekk etter oppdatering",
     "popup.options.darkTheme": "Mørkt Tema",
-    "connectionInfo.connected": "Koblet til %SERVICE%",
-    "connectionInfo.disconnected": "Koblet fra %SERVICE%",
     "popup.options.systemStartup": "Start ved S",
     "presence.episode": "Episode",
     "presence.browsing": "Surfer på...",
@@ -33,16 +31,21 @@
     "tab.installed.getSupport": "Få Hjelp",
     "tab.installed.likeThisProject": "Liker du prosjektet? Gi det en stjerne på $1",
     "tab.updated.gotIt": "Ok",
-    "tab.updated.added0": "Nytt Design!",
-    "tab.updated.added1": "Rabb.it støtte",
-    "tab.updated.nextVersion.added2": "Amazon Prime støtte",
-    "tab.updated.added3": "Anime4You støtte",
-    "tab.updated.nextVersion.added4": "CrunchyRoll støtte",
-    "tab.updated.changed0": "Mange feil er fikset, så nå vil de ikke plage deg mer",
-    "tab.updated.changed1": "Mange omskrivninger",
-    "extension.description": "",
+    "extension.description": "PreMiD gir deg Discord Rich Presence integrasjon, Mediakontroller og mye mer for Youtube/Youtube Music, Twitch osv...",
     "popup.options.connectInfo": "Tilkoblingsinformasjon",
     "popup.error": "Feil",
     "popup.error.message": "Kunne ikke laste inn listen over bidragsytere",
-    "presence.lookingForAnime": "Leter etter Anime"
+    "presence.lookingForAnime": "Leter etter Anime",
+    "tabPriority.prioritized": "Fane prioritert",
+    "popup.options.tabPriority": "",
+    "tab.updated.changed0": "",
+    "tab.updated.changed1": "",
+    "tab.updated.changed2": "",
+    "tab.updated.added0": "",
+    "tab.updated.changed3": "",
+    "tab.updated.changed4": "",
+    "tab.updated.added1": "",
+    "tab.updated.added2": "",
+    "tab.updated.changed5": "",
+    "tab.updated.changed6": ""
 }
