--- a/Extension/languages/pt_PT.json
+++ b/Extension/languages/pt_PT.json
@@ -2,7 +2,7 @@
     "tab.installed.heading": "Obrigado por instalares PreMiD",
     "tab.installed.subHeading.didInstallQuestion": "Já instalas-te a aplicação?",
     "tab.installed.subHeading.notInstalled": "Não? Segue estes passos:",
-    "tab.installed.instructions.download": "Baixa a ultima versão apatir de $1",
+    "tab.installed.instructions.download": "Baixa a ultima versão apartir de $1",
     "tab.installed.instructions.github": "o meu repositorio do GitHub",
     "tab.installed.instructions.wait": "Abre o instalador e espera ",
     "tab.installed.instructions.warnings": "Tu podes receber um aviso do FireWall ou SmartScreen ( Não é um vírus eu prometo! )",
@@ -23,25 +23,18 @@
     "popup.options.mediaControls": "Controles de Mídia",
     "popup.options.checkForUpdates": "Verificar por atualizações",
     "popup.options.darkTheme": "Tema escuro",
-    "connectionInfo.connected": "%SERVICE% foi conectado",
-    "connectionInfo.disconnected": "%SERVICE% foi disconectado",
     "popup.options.systemStartup": "Inicializar com o sistema",
     "presence.episode": "Episódio",
     "presence.browsing": "A pesquisar...",
     "presence.watching": "a vêr",
     "tab.installed.letsStart": "Vamos Começar!",
     "tab.installed.getSupport": "Receba suporte",
-    "tab.installed.likeThisProject": "Gostas deste projeto? Apoia com $1",
+    "tab.installed.likeThisProject": "Gostas deste projeto? Apoia com $1!",
     "tab.updated.gotIt": "Consegui!",
-    "tab.updated.added0": "Novo Design",
-    "tab.updated.added1": "Rabb.it suporte",
-    "tab.updated.nextVersion.added2": "Amazon Prime suporte",
-    "tab.updated.added3": "Anime4You suporte",
-    "tab.updated.nextVersion.added4": "CrunchyRoll suporte",
-    "tab.updated.changed0": "Muitos bugs corrigidos, eles não vão mais incomodar",
-    "tab.updated.changed1": "Muitas reescritas",
     "extension.description": "O PreMiD adiciona uma integração com o Discord Rich Presence, Controles de Mídia e muito mais para YouTube/YouTube Music, Twitch etc..",
     "popup.options.connectInfo": "Informação de Conexão",
     "popup.error": "Erro",
-    "popup.error.message": "Não possível carregar os créditos"
+    "popup.error.message": "Não possível carregar os créditos",
+    "presence.lookingForAnime": "A Procurar Animes...",
+    "tabPriority.prioritized": "Tab priorizada"
 }
