--- a/Extension/languages/ru.json
+++ b/Extension/languages/ru.json
@@ -2,7 +2,7 @@
     "tab.installed.heading": "Спасибо за установку PreMiD",
     "tab.installed.subHeading.didInstallQuestion": "Вы уже установили приложение?",
     "tab.installed.subHeading.notInstalled": "Нет? Тогда следуйте этим инструкциям:",
-    "tab.installed.instructions.download": "Скачайте последнюю версию с $1",
+    "tab.installed.instructions.download": "Скачайте последнюю версию с {{github_link}}",
     "tab.installed.instructions.github": "моего репозитория",
     "tab.installed.instructions.wait": "Запустите установщик и дождитесь окончания установки",
     "tab.installed.instructions.warnings": "Вы можете увидеть предупреждение FireWall или SmartScreen (Это не вирус, я клянусь)",
@@ -23,8 +23,6 @@
     "popup.options.mediaControls": "Управление медиа",
     "popup.options.checkForUpdates": "Проверять обновления",
     "popup.options.darkTheme": "Темная тема",
-    "connectionInfo.connected": "Подключен к %SERVICE%",
-    "connectionInfo.disconnected": "Отключен от %SERVICE%",
     "popup.options.systemStartup": "Запуск при старте системы",
     "presence.episode": "Эпизод",
     "presence.browsing": "Смотрит...",
@@ -33,15 +31,10 @@
     "tab.installed.getSupport": "Получить поддержку",
     "tab.installed.likeThisProject": "Нравится проект? Поддержи нас звездой на $1!",
     "tab.updated.gotIt": "Хорошо!",
-    "tab.updated.added0": "Новый дизайн!",
-    "tab.updated.added1": "Поддержка Rabb.it",
-    "tab.updated.nextVersion.added2": "Поддержка Amazon Prime",
-    "tab.updated.added3": "Поддержка Anime4You",
-    "tab.updated.nextVersion.added4": "Поддержка CrunchyRoll",
-    "tab.updated.changed0": "Множество ошибок устранено, они вас больше не потревожат.",
-    "tab.updated.changed1": "Множество исправлений",
     "extension.description": "PreMiD добавляет интеграцию с Discord Rich Presence, управление медиа и многое другое для YouTube/YouTube Music, Twitch и т.д.",
     "popup.options.connectInfo": "Информация о соединении",
     "popup.error": "Ошибка",
-    "popup.error.message": "Не удалось загрузить пользователей"
+    "popup.error.message": "Не удалось загрузить пользователей",
+    "presence.lookingForAnime": "Ищет аниме...",
+    "tabPriority.prioritized": "Вкладка в приоритете"
 }
